# python-solidfireclient

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py  sf.rc.example  test-requirements.txt  tox.ini
solidfire/: solidfire_element_api.py
solidfire/cli/: cli.py  utils.py
solidfire/cli/commands/: cmd_accounts.py  cmd_volumes.py
solidfireclient/: __init__.py  client.py  exceptions.py  sfapi.py  shell.py  solidfire_exceptions.py  utils.py
solidfireclient/common/: base.py  http.py
solidfireclient/contrib/: README.md
solidfireclient/tests/unit/: test_test.py
solidfireclient/v1/: .shell.py.swp  __init__.py  accounts.py  client.py  cluster.py  cluster_manager.py  object_utils.py  shell.py  snapshots.py  solidfire_element_api.py  solidfire_lib.py  volumes.bak.py  volumes.py
