[metadata]
name = python-solidfireclient
summary = SolidFire API Client Library
description-file =
    README.md
author = SolidFire Inc
author-email = john.griffith@solidfire.com
home-page = http://www.solidfire.com/
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    solidfireclient

[entry_points]
console_scripts =
    solidfire = solidfireclient.shell:main
